--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,3 @@
-node_modules
-
-#Hardhat files
-cache
-artifacts
-
-package-lock.json
-exports
-yarn.lock
-
-coverage
-coverage.json
 /out
-
-# macOS
-.DS_Store
-key.json
-.env
-
-# HEVM
 hevm*
+.vscode/*
