--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: bakii0499/dapptools:0.46.0
     steps:
       - run:
-          name: Checkout funds-distribution-token
+          name: Checkout maple-token
           command: |
             GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no" git clone git@github.com:maple-labs/maple-token.git .
             git checkout $CIRCLE_BRANCH
